<resources>

    <string name="app_name">Tic Tac Toc</string>
    <string name="player1_name">Player 1</string>
    <string name="player2_name">Player 2</string>
    <string name="start_button_text">Play</string>
    <string name="reset">Reset</string>
    <string name="one_sec">1 Second</string>
    <string name="two_sec">2 Seconds</string>
    <string name="five_sec">5 Seconds</string>
    <string name="ten_sec">10 Seconds</string>
    <string name="tag0">0</string>
    <string name="tag1">1</string>
    <string name="tag2">2</string>



    <integer name="max_score">5</integer>
    <integer name="bar_time">500</integer>
    <integer name="bar_click_time">50</integer>


</resources>